Updated style.css : fixed navbar align-center issue

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     background-color: #FFF4E5;
     border-radius: calc(infinity*1rem);
     padding: 0.5rem 2rem;
@@ -66,6 +67,7 @@
 }
 
 .links a{
+    text-align: center;
     text-decoration: none;
     color: black;
     font-size: 1.3rem;
